<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/completeGame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/top_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/playEnd"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/resultsP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/top_title"
        android:layout_centerHorizontal="true"
        android:text="@string/resultsP1"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/nameP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_below="@id/resultsP1"
        android:layout_centerHorizontal="true"
        android:text="@string/nameP1"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/scoreP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_below="@id/nameP1"
        android:layout_centerHorizontal="true"
        android:text="@string/scoreP1"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/resultsP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/scoreP1"
        android:layout_centerHorizontal="true"
        android:text="@string/resultsP2"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/nameP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_below="@id/resultsP2"
        android:layout_centerHorizontal="true"
        android:text="@string/nameP2"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/scoreP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_below="@id/nameP2"
        android:layout_centerHorizontal="true"
        android:text="@string/scoreP2"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/resultsP3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/scoreP2"
        android:layout_centerHorizontal="true"
        android:text="@string/resultsP3"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/nameP3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_below="@id/resultsP3"
        android:layout_centerHorizontal="true"
        android:text="@string/nameP3"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/scoreP3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_below="@id/nameP3"
        android:layout_centerHorizontal="true"
        android:text="@string/scoreP3"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/resultsP4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/scoreP3"
        android:layout_centerHorizontal="true"
        android:text="@string/resultsP4"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/nameP4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_below="@id/resultsP4"
        android:layout_centerHorizontal="true"
        android:text="@string/nameP4"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/scoreP4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_below="@id/nameP4"
        android:layout_centerHorizontal="true"
        android:text="@string/scoreP4"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/saveInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoreP4"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/saveInstructions"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/saveResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/saveInstructions"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/saveFinish"
        android:paddingVertical="15dp"
        android:paddingHorizontal="20dp" />

    <TextView
        android:id="@+id/endInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saveResults"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/endInstructions"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/killResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endInstructions"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/discardFinish"
        android:paddingVertical="15dp"
        android:paddingHorizontal="20dp" />

</RelativeLayout>