<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playerSelect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/instructions1"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/addPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/playerDD"
        android:text="@string/howToAddPlayer"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/createPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addPlayer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/howToCreatePlayer"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textAlignment="center"/>

    <Spinner
        android:id="@+id/playerDD"
        android:layout_width="550dp"
        android:layout_height="48dp"
        android:layout_below="@id/instruction"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:spinnerMode="dialog"
        android:prompt="@string/select_players"
        android:background="@color/faint_blue"/>

    <Button
        android:id="@+id/addGolfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createPlayer"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="18dp"
        android:paddingHorizontal="18dp"
        android:backgroundTint="@color/light_green"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/addGolfer"/>

    <Button
        android:id="@+id/createGolfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createPlayer"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="18dp"
        android:paddingHorizontal="18dp"
        android:backgroundTint="@color/light_yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/createGolfer"/>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addGolfer"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:padding="7dp"
        android:autofillHints="name"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:inputType="textCapCharacters"
        android:hint="@string/enterFirstName"
        android:textColorHint="@color/white"
        android:textAllCaps="true"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstName"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:padding="7dp"
        android:autofillHints="name"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:inputType="textCapCharacters"
        android:hint="@string/enterLastName"
        android:textColorHint="@color/white"
        android:textAllCaps="true"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/handicap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastName"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:padding="7dp"
        android:autofillHints="name"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:inputType="textCapCharacters"
        android:hint="@string/enterHandicap"
        android:textColorHint="@color/white"
        android:textAllCaps="true"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/saveToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/handicap"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:paddingVertical="18dp"
        android:paddingHorizontal="25dp"
        android:backgroundTint="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/off_white"
        android:text="@string/saveGolfer"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/goToCourse"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="15dp"
        android:paddingVertical="20dp"
        android:backgroundTint="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/getCourse"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/playerList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/handicap"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="10dp"
        android:text="@string/showPlayers"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/white"/>

</RelativeLayout>