<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/courseSelect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/instructions2"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/howToAddCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/courseDD"
        android:text="@string/addingCourse"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/howToCreateCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/howToAddCourse"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/creatingCourse"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textAlignment="center"/>

    <Spinner
        android:id="@+id/courseDD"
        android:layout_width="550dp"
        android:layout_height="48dp"
        android:layout_below="@id/instruction"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:spinnerMode="dialog"
        android:prompt="@string/select_course"
        android:background="@color/faint_blue"/>

    <Button
        android:id="@+id/addCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/howToCreateCourse"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="18dp"
        android:paddingHorizontal="18dp"
        android:backgroundTint="@color/light_green"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/addCourse"/>

    <Button
        android:id="@+id/createCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/howToCreateCourse"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="18dp"
        android:paddingHorizontal="18dp"
        android:backgroundTint="@color/light_yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/createCourse"/>

    <Button
        android:id="@+id/accept"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="15dp"
        android:paddingVertical="20dp"
        android:backgroundTint="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/startRound"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/playerList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addCourse"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/showPlayers"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/courseList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playerList"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:text="@string/showCourse"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/pars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/courseList"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"/>

</RelativeLayout>